<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.task.university.MenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="169.5dip"
        android:layout_height="58dip"
        android:layout_marginTop="30dip"
        app:srcCompat="@drawable/emblem"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dip" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:text="@string/faculty_of_informatics"
        android:textColor="@android:color/black"
        android:textSize="20dip" />

    <Button
        android:id="@+id/searchPlacesButton"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/find_free_places" />

    <Button
        android:id="@+id/myReservationsButton"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchPlacesButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/my_reservations" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myReservationsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/reservation_of_rooms" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/suggest_a_cooperation" />


</RelativeLayout>
