<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.task.university.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="169.5dip"
        android:layout_height="58dip"
        android:layout_marginTop="30dip"
        app:srcCompat="@drawable/emblem"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dip" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:text="@string/faculty_of_informatics"
        android:textColor="@android:color/black"
        android:textSize="20dip" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginEnd="30dip"
        android:layout_marginStart="20dip" />

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="25dip"
        android:text="@string/login"
        android:layout_above="@+id/passwordEditText"
        android:layout_alignStart="@+id/textView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/loginEditText"
        android:layout_below="@+id/loginEditText"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passwordEditText"
        android:layout_alignStart="@+id/textView3"
        android:textColor="@android:color/black"
        android:textSize="25dip"
        android:text="@string/password" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="37dp"

        android:text="@string/login" />

</RelativeLayout>
